[package]
name = "typepy"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
enum_dispatch = "0.3"
getopts = "0.2"
gimli = { version = "0.28", features = ["write"], default-features = false }
object = { version = "0.32", features = ["write"], default-features = false }
cc = "1.0"
once_cell = "1.3"
md-5 = "0.10"
